# claude-chat-cli

./: .env.example  CLAUDE.md  README.md  mcp_client.py  mcp_server.py  pyproject.toml
.claude/agents/: code-quality-reviewer.md
.claude/skills/code-review/: SKILL.md
app.egg-info/: PKG-INFO
demo/: demo.mov  logging-notification-demo.mov  skills-demo.mov  subagent-demo.mov
mcp_app.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scripts/: secret_scan.py
